--- a/.bazelrc
+++ b/.bazelrc
@@ -1,4 +1,6 @@
-startup --output_base=/data/bazel_cache --windows_enable_symlinks
+# startup --output_base=/data/bazel_cache --windows_enable_symlinks
+startup --windows_enable_symlinks
+startup --output_base=D:/bazel_cache
 common --noenable_bzlmod
 common --experimental_downloader_config=.bazel_downloader.cfg
 common --enable_platform_specific_config
@@ -113,6 +115,7 @@ build:windows --cxxopt='/std:c++17'
 build:windows --host_cxxopt='/std:c++17'
 build:windows --compiler='msvc-cl'
 build:windows --cpu='x64_windows'
+#build:windows --cpu='x64_64'
 build:windows --extra_toolchains='@openssl//:preinstalled_nmake_toolchain'
 build:windows --extra_toolchains='@openssl//:preinstalled_pkgconfig_toolchain'
 build:windows --workspace_status_command=bazel/workspace_status.bat
