--- a/src/test/BUILD
+++ b/src/test/BUILD
@@ -1,15 +1,55 @@
 load("//bazel:build.bzl", "cc_test")
 load("//bazel:cpplint.bzl", "cpplint")
+load("@oceandoc//bazel:common.bzl", "GLOBAL_COPTS", "GLOBAL_LOCAL_DEFINES")
 
 package(default_visibility = ["//visibility:public"])
 
 cpplint()
 
+COPTS = GLOBAL_COPTS + select({
+    "@platforms//os:windows": [
+        "/Iexternal/double-conversion",
+        "/Iexternal/folly",
+        "/Iexternal/libsodium/src/libsodium/include",
+        "/I$(GENDIR)/external/folly",
+    ],
+    "//conditions:default": [
+        "-isystem external/double-conversion",
+        "-isystem external/folly",
+        "-isystem external/libsodium/src/libsodium/include",
+        "-isystem $(GENDIR)/external/folly",
+    ],
+}) + select({
+    "@platforms//os:linux": [],
+    "@platforms//os:osx": [],
+    "@platforms//os:windows": [],
+    "//conditions:default": [],
+})
+
+LOCAL_DEFINES = GLOBAL_LOCAL_DEFINES + select({
+    "@platforms//os:windows": [
+        "GLOG_NO_ABBREVIATED_SEVERITIES",
+    ],
+    "//conditions:default": ["BUILD_TRACING=0"],
+}) + select({
+    "@platforms//os:linux": [],
+    "@platforms//os:osx": [],
+    "@platforms//os:windows": [],
+    "//conditions:default": [],
+})
+
 cc_library(
     name = "debug",
     srcs = ["debug.cc"],
-    copts = [
-    ],
+    copts = COPTS,
+    local_defines = LOCAL_DEFINES,
+    defines = select({
+        "@platforms//os:windows": [
+            "WIN32",
+            "_WIN32",
+        ],
+        "//conditions:default": [],
+    }),
     deps = [
         "@com_github_gflags_gflags//:gflags",
         "@com_github_glog_glog//:glog",
@@ -19,11 +59,15 @@ cc_library(
 cc_library(
     name = "test_util",
     hdrs = ["test_util.h"],
-    copts = [
-        "-isystem external/double-conversion",
-        "-isystem external/folly",
-        "-isystem $(GENDIR)/external/folly",
-    ],
+    copts = COPTS,
+    local_defines = LOCAL_DEFINES,
+    defines = select({
+        "@platforms//os:windows": [
+            "WIN32",
+            "_WIN32",
+        ],
+        "//conditions:default": [],
+    }),
     deps = [
         "//src/util",
     ],
@@ -32,11 +76,15 @@ cc_library(
 cc_library(
     name = "test_main",
     srcs = ["test_main.cc"],
-    copts = [
-        "-isystem external/double-conversion",
-        "-isystem external/folly",
-        "-isystem $(GENDIR)/external/folly",
-    ],
+    copts = COPTS,
+    local_defines = LOCAL_DEFINES,
+    defines = select({
+        "@platforms//os:windows": [
+            "WIN32",
+            "_WIN32",
+        ],
+        "//conditions:default": [],
+    }),
     deps = [
         "@com_github_gflags_gflags//:gflags",
         "@com_github_glog_glog//:glog",
