--- a/src/server/http_handler/BUILD
+++ b/src/server/http_handler/BUILD
@@ -1,4 +1,4 @@
-load("@oceandoc//bazel:common.bzl", "GLOBAL_COPTS")
+load("@oceandoc//bazel:common.bzl", "GLOBAL_COPTS", "GLOBAL_LINKOPTS", "GLOBAL_LOCAL_DEFINES", "version_info")
 load("//bazel:build.bzl", "cc_test")
 load("//bazel:cpplint.bzl", "cpplint")
 
@@ -30,6 +30,28 @@ COPTS = GLOBAL_COPTS + select({
     "//conditions:default": [],
 })
 
+LOCAL_DEFINES = GLOBAL_LOCAL_DEFINES + select({
+    "@platforms//os:windows": [
+        "GLOG_NO_ABBREVIATED_SEVERITIES",
+    ],
+    "//conditions:default": ["BUILD_TRACING=0"],
+}) + select({
+    "@platforms//os:linux": [],
+    "@platforms//os:osx": [],
+    "@platforms//os:windows": [],
+    "//conditions:default": [],
+})
+
+LINKOPTS = GLOBAL_LINKOPTS + select({
+    "@platforms//os:windows": [],
+    "//conditions:default": [],
+}) + select({
+    "@platforms//os:linux": [],
+    "@platforms//os:osx": [],
+    "@platforms//os:windows": [],
+    "//conditions:default": [],
+})
+
 cc_library(
     name = "http_handler",
     srcs = [],
@@ -43,6 +65,8 @@ cc_library(
         "util.h",
     ],
     copts = COPTS,
+    linkopts = LINKOPTS,
+    local_defines = LOCAL_DEFINES,
     deps = [
         "//src/impl:repo_manager",
         "//src/server/handler_proxy",
@@ -58,5 +82,7 @@ cc_test(
     name = "util_test",
     srcs = ["util_test.cc"],
     copts = COPTS,
+    linkopts = LINKOPTS,
+    local_defines = LOCAL_DEFINES,
     deps = [":http_handler"],
 )
