--- a/src/client/grpc_client/BUILD
+++ b/src/client/grpc_client/BUILD
@@ -38,19 +38,7 @@ COPTS = GLOBAL_COPTS + select({
     "//conditions:default": [],
 })
 
-LOCAL_DEFINES = GLOBAL_LOCAL_DEFINES + select({
-    "@platforms//os:windows": [
-        "GLOG_NO_ABBREVIATED_SEVERITIES",
-        "_CRT_DECLARE_NONSTDC_NAMES=1",
-        "_CRT_USE_WINAPI_FAMILY_DESKTOP_APP",
-    ],
-    "//conditions:default": ["BUILD_TRACING=0"],
-}) + select({
-    "@platforms//os:linux": [],
-    "@platforms//os:osx": [],
-    "@platforms//os:windows": [],
-    "//conditions:default": [],
-})
+LOCAL_DEFINES = GLOBAL_LOCAL_DEFINES
 
 LINKOPTS = GLOBAL_LINKOPTS + select({
     "@platforms//os:windows": [],
@@ -72,13 +60,7 @@ cc_library(
     ],
     copts = COPTS,
     linkopts = LINKOPTS,
-    local_defines = LOCAL_DEFINES + select({
-        "@platforms//os:windows": [
-            "_CRT_SECURE_NO_DEPRECATE",
-            "_CRT_NONSTDC_NO_DEPRECATE",
-        ],
-        "//conditions:default": [],
-    }),
+    local_defines = LOCAL_DEFINES,
     deps = [
         "//src/async_grpc",
         "//src/common:blocking_queue",
