--- a/src/util/BUILD
+++ b/src/util/BUILD
@@ -26,17 +26,7 @@ COPTS = GLOBAL_COPTS + select({
     "//conditions:default": [],
 })
 
-LOCAL_DEFINES = GLOBAL_LOCAL_DEFINES + select({
-    "@platforms//os:windows": [
-        "GLOG_NO_ABBREVIATED_SEVERITIES",
-    ],
-    "//conditions:default": ["BUILD_TRACING=0"],
-}) + select({
-    "@platforms//os:linux": [],
-    "@platforms//os:osx": [],
-    "@platforms//os:windows": [],
-    "//conditions:default": [],
-})
+LOCAL_DEFINES = GLOBAL_LOCAL_DEFINES
 
 cc_library(
     name = "config_manager",
@@ -93,13 +83,6 @@ cc_library(
     srcs = ["util.cc"],
     hdrs = ["util.h"],
     copts = COPTS,
-    defines = select({
-        "@platforms//os:windows": [
-            "WIN32",
-            "_WIN32",
-        ],
-        "//conditions:default": [],
-    }),
     local_defines = LOCAL_DEFINES,
     deps = [
         "//src/common:defs",
