--- a/.bazelrc
+++ b/.bazelrc
@@ -1,6 +1,6 @@
-# startup --output_base=/data/bazel_cache --windows_enable_symlinks
+startup --output_base=/data/bazel_cache --windows_enable_symlinks
 startup --windows_enable_symlinks
-startup --output_base=D:/bazel_cache
+#startup --output_base=D:/bazel_cache
 common --noenable_bzlmod
 common --experimental_downloader_config=.bazel_downloader.cfg
 common --enable_platform_specific_config
