support macosx x86_64 and arm64

--- a/.bazelrc
+++ b/.bazelrc
@@ -1,4 +1,4 @@
-startup --output_base=/data/bazel_cache --windows_enable_symlinks
+#startup --output_base=/data/bazel_cache --windows_enable_symlinks
 startup --windows_enable_symlinks
 #startup --output_base=D:/bazel_cache
 common --noenable_bzlmod
