--- a/.bazelrc
+++ b/.bazelrc
@@ -1,8 +1,8 @@
-#startup --output_base=/data/bazel_cache --windows_enable_symlinks
 startup --windows_enable_symlinks
 #startup --output_base=D:/bazel_cache
+#startup --output_base=/data/bazel_cache --windows_enable_symlinks
 common --noenable_bzlmod
-common --experimental_downloader_config=.bazel_downloader.cfg
+#common --experimental_downloader_config=.bazel_downloader.cfg
 common --enable_platform_specific_config
 #build --remote_cache=http://192.168.1.101/bazel_cache
 #build --keep_going
