--- a/conf/fstation.service
+++ b/conf/fstation.service
@@ -6,7 +6,7 @@ After=network-online.target
 Type=simple
 CapabilityBoundingSet=CAP_NET_BIND_SERVICE
 AmbientCapabilities=CAP_NET_BIND_SERVICE
-User=dev
+User=root
 ExecStart=/usr/local/fstation/bin/server
 ExecReload=/bin/kill -HUP $MAINPID
 Restart=on-failure
