--- a/src/util/BUILD
+++ b/src/util/BUILD
@@ -152,3 +152,14 @@ cc_test(
     local_defines = LOCAL_DEFINES,
     deps = [":config_manager"],
 )
+
+cc_test(
+    name = "sqlite_manager_test",
+    srcs = [
+        "sqlite_manager_test.cc",
+    ],
+    copts = COPTS,
+    data = ["//conf:client_base_config.json"],
+    local_defines = LOCAL_DEFINES,
+    deps = [":sqlite_manager"],
+)
