upload file interface

--- a/src/util/BUILD
+++ b/src/util/BUILD
@@ -114,6 +114,7 @@ cc_library(
         "@openssl",
         "@rapidjson",
         "@smhasher",
+        "@xxhash",
         "@xz//:lzma",
     ] + select({
         "@oceandoc//bazel:jemalloc": ["@jemalloc"],
